# PBPrompt

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSES  Makefile  README.md  babel.cfg  claude_original_prompt.txt  claude_prompt.txt  claude_summary.txt  environment.yml  pbprompt.spec  pyproject.toml
.github/workflows/: ci.yml
doc/: changelog.rst  conf.py  development.rst  index.rst  installation.rst  licenses_overview.rst  usage.rst
doc/api/: modules.rst
docs/: Makefile  conf.py  development.rst  index.rst  usage.rst
docs/_static/: custom.css
hooks/: rthook_ssl.py
locales/: messages.pot
locales/de/LC_MESSAGES/: messages.po
locales/en/LC_MESSAGES/: messages.po
locales/es/LC_MESSAGES/: messages.po
locales/fr/LC_MESSAGES/: messages.po
locales/it/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
locales/vi/LC_MESSAGES/: messages.po
locales/zh_CN/LC_MESSAGES/: messages.po
resources/: resources.qrc
scripts/: build_linux.sh  build_macos.sh  build_qm.sh  build_windows.bat  bump_version.py  compile_translations.sh  extract_changelog.py  make_png.py  rtd_cleanup.py
src/pbprompt/: __init__.py  __main__.py  config.py  data.py  i18n.py
src/pbprompt/gui/: __init__.py  about_dialog.py  about_dialog.ui  about_dialog_ui.py  icons.py  image_utils.py  main_window.py  main_window.ui  main_window_ui.py  models.py  settings_dialog.py  settings_dialog.ui  settings_dialog_ui.py
src/pbprompt/platform/: __init__.py  linux.py  macos.py  windows.py
src/pbprompt/translate/: __init__.py  baidu.py  base.py  deepl.py  google.py  libretranslate.py  linguee.py  microsoft.py  mymemory.py  papago.py  pons.py  qcri.py  reverso.py  yandex.py
tests/: conftest.py  test_config.py  test_data.py  test_gui_basic.py  test_i18n.py  test_image_utils.py  test_main.py  test_main_window.py  test_platform.py  test_platform_extended.py  test_translate.py  test_translate_extended.py
tools/: build_linux.sh  build_macos.sh  build_qm.sh  build_windows.bat  bump_version.py  compile_translations.sh  extract_changelog.py  fix_po_files.py  git_version.sh  po_check.py  rtd_cleanup.py
